tests/parser/errors/incomplete_base_prefix.mochi
let n = 0x
